--- a/lib/src/localization/app_id.arb
+++ b/lib/src/localization/app_id.arb
@@ -11,5 +11,9 @@
   "indonesian": "Bahasa Indonesia",
   "calculate": "Hitung",
   "expression": "Ekspresi",
-  "result": "Hasil"
+  "result": "Hasil",
+  "gallery": "Galeri",
+  "camera": "Kamera",
+  "file": "Berkas",
+  "other": "Lainnya"
 }
