Add Flutter Tesseract

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -15,5 +15,6 @@
   "gallery": "Gallery",
   "camera": "Camera",
   "file": "File",
-  "other": "Other"
+  "other": "Other",
+  "loading": "Loading"
 }
