--- a/lib/src/localization/app_id.arb
+++ b/lib/src/localization/app_id.arb
@@ -15,5 +15,6 @@
   "gallery": "Galeri",
   "camera": "Kamera",
   "file": "Berkas",
-  "other": "Lainnya"
+  "other": "Lainnya",
+  "loading": "Memuat"
 }
