Add File Storage

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -19,6 +19,9 @@
   "other": "Other",
   "loading": "Loading",
   "ok": "OK",
+  "storageType": "Storage Type",
+  "databaseStorage": "Database Storage",
+  "fileStorage": "File Storage",
   "couldNotCreateCalculationHistory": "Could Not Add Calculation History.",
   "couldNotGetCalculationHistory": "Could Not Get Calculation History.",
   "couldNotGetAllCalculationHistory": "Could Not Get All Calculation Histories.",
