--- a/lib/src/localization/app_id.arb
+++ b/lib/src/localization/app_id.arb
@@ -19,6 +19,9 @@
   "other": "Lainnya",
   "loading": "Memuat",
   "ok": "OK",
+  "storageType": "Tipe Penyimpanan",
+  "databaseStorage": "Penyimpanan Basis Data",
+  "fileStorage": "Penyimpanan Berkas",
   "couldNotCreateCalculationHistory": "Tidak bisa menambahkan riwayat perhitungan.",
   "couldNotGetCalculationHistory": "Tidak bisa mendapatkan riwayat perhitungan.",
   "couldNotGetAllCalculationHistory": "Tidak bisa mendapatkan semua riwayat perhitungan.",
