Improve Setting View

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -4,8 +4,11 @@
     "description": "The title of the application"
   },
   "settings": "Settings",
+  "system": "System",
   "systemTheme": "System Theme",
+  "light": "Light",
   "lightTheme": "Light Theme",
+  "dark": "Dark",
   "darkTheme": "Dark Theme",
   "english": "English",
   "indonesian": "Indonesian",
@@ -22,6 +25,8 @@
   "storageType": "Storage Type",
   "databaseStorage": "Database Storage",
   "fileStorage": "File Storage",
+  "theme": "Theme",
+  "language": "Language",
   "couldNotCreateCalculationHistory": "Could Not Add Calculation History.",
   "couldNotGetCalculationHistory": "Could Not Get Calculation History.",
   "couldNotGetAllCalculationHistory": "Could Not Get All Calculation Histories.",
