--- a/lib/src/localization/app_id.arb
+++ b/lib/src/localization/app_id.arb
@@ -4,8 +4,11 @@
     "description": "The title of the application"
   },
   "settings": "Pengaturan",
+  "system": "Sistem",
   "systemTheme": "Tema Sistem",
+  "light": "Terang",
   "lightTheme": "Tema Terang",
+  "dark": "Gelap",
   "darkTheme": "Tema Gelap",
   "english": "Inggris",
   "indonesian": "Bahasa Indonesia",
@@ -22,6 +25,8 @@
   "storageType": "Tipe Penyimpanan",
   "databaseStorage": "Penyimpanan Basis Data",
   "fileStorage": "Penyimpanan Berkas",
+  "theme": "Tema",
+  "language": "Bahasa",
   "couldNotCreateCalculationHistory": "Tidak bisa menambahkan riwayat perhitungan.",
   "couldNotGetCalculationHistory": "Tidak bisa mendapatkan riwayat perhitungan.",
   "couldNotGetAllCalculationHistory": "Tidak bisa mendapatkan semua riwayat perhitungan.",
